--- a/src/main/config/ftp.properties
+++ b/src/main/config/ftp.properties
@@ -1,6 +1,7 @@
 #ftp服务器地址
 #ftpHost=111.231.250.43
-ftpHost=127.0.0.1
+#ftpHost=127.0.0.1
+ftpHost=175.6.77.235
 #ftp服务器的用户名
 #ftpUserName=lcl
 ftpUserName=ftpadmin
