--- a/src/main/config/ftp.properties
+++ b/src/main/config/ftp.properties
@@ -6,8 +6,8 @@ ftpHost=175.6.77.235
 #ftpUserName=lcl
 ftpUserName=ftpadmin
 #连接ftp服务器的用户名对应的密码
-#ftpPassword=123
-ftpPassword=dnkty2009
+ftpPassword=123456
+#ftpPassword=dnkty2009
 #ftp控制连接端口
 ftpPort=21
 #ftp服务器下载目录
