--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,17 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID">
   <display-name>bank_pm</display-name>
   
+  
+  <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/spring/logback.xml</param-value>
+    </context-param>
+ 
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
+  
+  
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/classes/spring/applicationContext-*.xml</param-value>
