--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -66,7 +66,14 @@
   	   -->
   	    <url-pattern>*.action</url-pattern>
   	    <url-pattern>/</url-pattern>
+  	    <url-pattern>/configuration/ui</url-pattern>
   </servlet-mapping>
+  
+ <servlet-mapping>
+    <servlet-name>springmvc</servlet-name>
+    <url-pattern>/v2/api-docs</url-pattern>
+     <url-pattern>/swaggerDemo/getBeansNumber</url-pattern>
+</servlet-mapping>
  
   <!-- 配置前端控制器 -->
   <servlet>
