--- a/src/main/config/db.properties
+++ b/src/main/config/db.properties
@@ -1,8 +1,8 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc\:mysql\://218.77.105.245\:33069/bank_app?allowMultiQueries\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull
-jdbc.url=jdbc:mysql://175.6.73.138:3406/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://175.6.73.138:3406/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+#jdbc.username=root
+#jdbc.password=root
 
 #jdbc.url=jdbc:mysql://218.77.105.245:33069/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 #jdbc.username=bank_user
@@ -16,3 +16,7 @@ jdbc.password=root
 #jdbc.password=9%OO1MX,f/wr1
 
 #jdbc.url=jdbc:mysql://localhost:3306/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+
+jdbc.url=jdbc:mysql://127.0.0.1:3306/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=root
