--- a/src/main/config/db.properties
+++ b/src/main/config/db.properties
@@ -1,12 +1,12 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc\:mysql\://218.77.105.245\:33069/bank_app?allowMultiQueries\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull
-jdbc.url=jdbc:mysql://175.6.73.138:3406/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://175.6.73.138:3406/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+#jdbc.username=root
+#jdbc.password=root
 
-#jdbc.url=jdbc:mysql://218.77.105.245:33069/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-#jdbc.username=bank_user
-#jdbc.password=654321
+jdbc.url=jdbc:mysql://218.77.105.245:33069/bank_app?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=bank_user
+jdbc.password=654321
 
 #jdbc.username=bank_user
 #jdbc.password=654321
