--- a/pom.xml
+++ b/pom.xml
@@ -111,22 +111,19 @@
 			<artifactId> aspectjweaver</artifactId>
 			<version> 1.6.11</version>
 		</dependency>
-		<!-- spring框架包 end -->
 
-		<!-- mybatis框架包 start -->
+
+
 		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>${mybatis.version}</version>
+			   <groupId>org.mybatis.spring.boot</groupId>
+			   <artifactId>mybatis-spring-boot-starter</artifactId>
+			   <version>1.3.2</version>
 		</dependency>
 
-		<!-- mybatis框架包 end -->
-
-		<!-- mybatis-spring整合包 -->
 		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>1.2.2</version>
+			   <groupId>com.github.pagehelper</groupId>
+			   <artifactId>pagehelper-spring-boot-starter</artifactId>
+			   <version>1.1.2</version>
 		</dependency>
 
 		<!-- 数据库驱动 -->
